# Tiny-3D

./: .gitignore  LICENSE.txt  README.md  meson.build
.cache/clangd/index/: VkBootstrap.cpp.983D938C4FA99136.idx  VkBootstrap.h.32B254DAC3BBC870.idx  VkBootstrapDispatch.h.CA26CA7AFD542A9A.idx  base64.cpp.C527B83B42541763.idx  base64.hpp.21EA4F4FB43A9711.idx  camera.cpp.3BF2470898F983BD.idx  camera.h.A4BE76BC0FB3E955.idx  core.hpp.52E5C9B11FCEACE2.idx  fastgltf.cpp.ABAE3F66B9F7674E.idx  glm_element_traits.hpp.3F2F643DF47C2050.idx  imconfig.h.CAF0DA0040316338.idx  imgui.cpp.9ED0C98A0A14573B.idx  imgui.h.F44893382A3C4E5C.idx  imgui_demo.cpp.6E4AB777BE776F63.idx  imgui_draw.cpp.E844E5DBFE343CE8.idx  imgui_impl_sdl2.cpp.59CE80ACD4845590.idx  imgui_impl_sdl2.h.15D8E365B3576DE7.idx  imgui_impl_vulkan.cpp.2E720217328569DB.idx  imgui_impl_vulkan.h.0F09D02A077E4641.idx  imgui_internal.h.D4856F6DB2315196.idx  imgui_tables.cpp.13F8D2E8CD9E78A7.idx  imgui_widgets.cpp.07644636AFBCC743.idx  imstb_rectpack.h.DD8D22AC7C56140A.idx  imstb_textedit.h.50115DF2A1D39C6B.idx  imstb_truetype.h.FCB3A08A75F6369E.idx  io.cpp.510954DE28CE85FB.idx  main.cpp.CB8210B678F9AB83.idx  math.hpp.770AFCBD625AD51E.idx  simdjson.cpp.5EB8412FF11E9162.idx  simdjson.h.96ACE5D9DD1C2B3E.idx  stb_image.h.8FD5FB7123DC189C.idx  tools.hpp.EF0D10470B31AE37.idx  types.hpp.BC2B58DE65F543D8.idx  util.hpp.559AA94FE3968484.idx  vk_descriptors.cpp.668883E5117922BA.idx  vk_descriptors.h.E10245112D738699.idx  vk_engine.cpp.8015EECF3FAA7700.idx  vk_engine.h.2DAAC07DAFC025FC.idx  vk_images.cpp.D004EA3F46697615.idx  vk_images.h.A3221BA19719F6BE.idx  (+11 more)
include/: camera.h  meson.build  vk_descriptors.h  vk_engine.h  vk_images.h  vk_initializers.h  vk_loader.h  vk_pipelines.h  vk_types.h
pch/: vk_render.h
shaders/: gradient.comp  gradient_color.comp  input_structures.glsl  mesh.frag  mesh.vert  tex_image.frag
shaders/triangle/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert
src/: CMakeLists.txt  camera.cpp  main.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_images.cpp  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_pipelines.cpp  vk_types.h
subprojects/: fastgltf.wrap  fmt.wrap  glm.wrap  imgui.wrap  stb_image.wrap  vkbootstrap.wrap  vma.wrap
subprojects/imgui/: meson.build
subprojects/stb_image/: meson.build  stb_image.h
subprojects/vkbootstrap/: VkBootstrap.cpp  meson.build
subprojects/vma/: meson.build
subprojects/volk/: meson.build
